--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 
+/* Variables */
+:root {
+  --text: #ffffff;
+  --primary: #1a0b2e;
+}
+
 * {
-  bottom: 0;
+  margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
@@ -13,4 +19,131 @@ body {
 .container {
   max-width: 1200px;
   margin: 0 auto;
+}
+
+nav {
+  background: var(--primary);
+  height: 92px;
+}
+
+nav .logo {
+  font-size: 30px;
+  font-weight: bold;
+  text-decoration: none;
+  color: #fff;
+}
+.logo span {
+  background: linear-gradient(
+    rgba(247, 233, 63, 1),
+    rgba(251, 9, 180, 1),
+    rgba(145, 0, 248, 1)
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+}
+
+nav ul {
+  list-style: none;
+  display: flex;
+  column-gap: 32px;
+}
+
+nav ul li a {
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 500;
+  color: var(--text);
+}
+
+.btn {
+  border: none;
+  outline: none;
+  background: transparent;
+  padding: 12px 16px;
+  border-radius: 30px;
+  color: var(--text);
+  background: var(
+    --Linear,
+    linear-gradient(
+      47.64deg,
+      rgba(247, 233, 63, 1),
+      rgba(251, 9, 180, 1),
+      rgba(145, 0, 248, 1)
+    )
+  );
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: 550;
+  display: flex;
+  align-items: center;
+  column-gap: 8px;
+}
+
+.nav-content {
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+header {
+  background: var(--primary);
+}
+
+#banner {
+  background: url(../assets/hero-bg.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top;
+  padding: 100px 0px;
+}
+
+.banner-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.banner-content h1 {
+  font-size: 60px;
+  color: var(--text);
+  font-weight: 800;
+  line-height: 60px;
+  padding-top: 40px;
+}
+
+.banner-content p {
+  color: var(--text);
+  font-size: 1rem;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  text-align: center;
+}
+
+.banner-img {
+  background-image: url(../assets/hero-circle.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 350px;
+  height: 350px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.banner-img img {
+  width: 150px;
+  height: 200px;
+}
+
+.banner-btns {
+  display: flex;
+  column-gap: 8px;
+}
+
+.btn-subscribe {
+  background: transparent;
+  border: 1px solid #00ff88;
+  color: #00ff88;
 }
