--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 :root {
   --text: #ffffff;
   --primary: #1a0b2e;
+  --secondary: #00ff88;
 }
 
 * {
@@ -26,7 +27,7 @@ nav {
   height: 92px;
 }
 
-nav .logo {
+.logo {
   font-size: 30px;
   font-weight: bold;
   text-decoration: none;
@@ -144,6 +145,243 @@ header {
 
 .btn-subscribe {
   background: transparent;
-  border: 1px solid #00ff88;
-  color: #00ff88;
+  border: 1px solid var(--secondary);
+  color: var(--secondary);
+}
+
+#about {
+  background: var(--primary);
+}
+
+.section_title {
+  font-size: 48px;
+  color: var(--text);
+  font-weight: 700;
+  text-align: center;
+}
+
+.hr {
+  margin-top: 80px;
+  margin-bottom: 80px;
+}
+.section_description {
+  font-size: 16px;
+  font-weight: 400;
+  color: var(--text);
+  text-align: center;
+  margin-bottom: 20px;
+  opacity: 0.6;
+}
+
+.about-cards {
+  display: flex;
+  justify-content: space-between;
+  column-gap: 40px;
+  padding-bottom: 40px;
+}
+.about-card {
+  padding: 6px 16px;
+}
+.about-card h3 {
+  color: var(--secondary);
+  font-size: 48px;
+  font-weight: 900;
+  text-align: center;
+  padding-bottom: 10px;
+}
+
+.about-card p {
+  font-size: 16px;
+  font-weight: 400;
+  color: var(--text);
+  text-align: center;
+  opacity: 0.6;
+}
+
+#choose {
+  background: #230e3d;
+  padding: 120px 0;
+}
+
+.choose-content h2 {
+  margin-bottom: 40px;
+}
+
+.showcase {
+  display: grid;
+  gap: 30px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+}
+.show-box {
+  padding: 40px;
+  border-radius: 30px;
+  background: #2a0f4d;
+}
+.show-box h3 {
+  padding: 16px 0;
+  font-size: 24px;
+  font-weight: bold;
+  color: var(--text);
+}
+
+.show-box p {
+  font-size: 16px;
+  font-weight: 400;
+  color: var(--text);
+  opacity: 0.6;
+}
+
+.big-row {
+  grid-row: span 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+.big-col {
+  grid-column: span 2;
+}
+
+#feature {
+  padding: 120px 0;
+  background: var(--primary);
+}
+.feature-content h2 {
+  margin-bottom: 40px;
+}
+
+.episode_details {
+  background: #250d44;
+  padding: 24px;
+}
+
+.episode_details h3 {
+  font-size: 24px;
+  font-weight: 700;
+  color: var(--text);
+}
+
+.episode_details p {
+  font-size: 16px;
+  font-weight: 400;
+  color: var(--text);
+  padding: 8px 0;
+  opacity: 0.6;
+}
+
+.episode_details .time {
+  font-size: 16px;
+  font-weight: 600;
+  color: var(--secondary);
+  display: flex;
+  column-gap: 8px;
+  justify-content: start;
+  align-items: center;
+}
+
+iframe {
+  display: block;
+  width: 100%;
+  height: 200px;
+}
+
+.episodes {
+  display: flex;
+  column-gap: 30px;
+}
+
+#contact {
+  background: var(--primary);
+  padding: 120px 0;
+}
+
+.contact-content {
+  display: flex;
+  column-gap: 24px;
+  background-color: #271045;
+  padding: 40px;
+  border-radius: 30px;
+  margin-top: 40px;
+}
+
+.contact-content h3 {
+  font-size: 32px;
+  font-weight: bold;
+  color: var(--text);
+  padding-bottom: 20px;
+}
+
+.contact-content p {
+  font-size: 16px;
+  color: var(--text);
+  padding-bottom: 20px;
+  opacity: 0.6;
+}
+
+.contact-img {
+  max-width: 200px;
+  max-height: 200px;
+}
+
+.contact-social {
+  display: flex;
+  column-gap: 8px;
+}
+
+.contact-icon {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: 1px solid #533c72;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+footer {
+  background: url(../assets/footer-bg.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  padding: 120px 0;
+}
+footer .logo {
+  font-weight: 900;
+  font-size: 40px;
+  margin-bottom: 30px;
+}
+
+.footer-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+footer ul {
+  display: flex;
+  column-gap: 40px;
+  list-style: none;
+  margin-bottom: 30px;
+}
+
+footer ul li a {
+  text-decoration: none;
+  display: flex;
+  justify-content: flex-start;
+  column-gap: 8px;
+  align-items: center;
+  color: var(--text);
+  opacity: 0.6;
+}
+footer ul li a:hover {
+  opacity: 1;
+}
+
+.copyright {
+  font-size: 16px;
+  color: var(--text);
+  opacity: 0.6;
 }
