--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,9 @@ body {
 }
 
 .container {
-  max-width: 1200px;
+  max-width: 1280px;
   margin: 0 auto;
+  padding: 0 40px;
 }
 
 nav {
@@ -56,6 +57,9 @@ nav ul li a {
   font-weight: 500;
   color: var(--text);
 }
+nav ul li a:hover {
+  opacity: 0.6;
+}
 
 .btn {
   border: none;
@@ -79,6 +83,13 @@ nav ul li a {
   display: flex;
   align-items: center;
   column-gap: 8px;
+  transition: all 0.8s ease;
+  border: 1px solid transparent;
+}
+
+.btn:hover {
+  background: var(--primary);
+  border: 1px solid var(--text);
 }
 
 .nav-content {
@@ -86,6 +97,10 @@ nav ul li a {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.menu-bar {
+  display: none;
 }
 
 header {
@@ -147,6 +162,11 @@ header {
   background: transparent;
   border: 1px solid var(--secondary);
   color: var(--secondary);
+  transition: all 0.8s ease-in-out;
+}
+.btn-subscribe:hover {
+  border: 1px solid #00ff88;
+  background: #2a0f4d;
 }
 
 #about {
@@ -254,6 +274,8 @@ header {
 .episode_details {
   background: #250d44;
   padding: 24px;
+  border-bottom-right-radius: 30px;
+  border-bottom-left-radius: 30px;
 }
 
 .episode_details h3 {
@@ -284,11 +306,14 @@ iframe {
   display: block;
   width: 100%;
   height: 200px;
+  border-top-right-radius: 30px;
+  border-top-left-radius: 30px;
 }
 
 .episodes {
-  display: flex;
-  column-gap: 30px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 40px;
 }
 
 #contact {
@@ -338,6 +363,10 @@ iframe {
   justify-content: center;
   align-items: center;
   cursor: pointer;
+}
+
+.contact-icon:hover {
+  background: var(--primary);
 }
 
 footer {
